update for ctforming

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Simple landing page</title>
+  <title>CT Forming, LinkedIn & Inbound Marketing</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -32,19 +32,24 @@
             </button>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#header-section">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#header-section">Accueil <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#features-section">About</a>
+            <a class="nav-link" href="#features-section">Pédagogie</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#digital-marketing-section">Blog</a>  
+            <a class="nav-link" href="#digital-marketing-section">Contexte</a>  
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#feedback-section">Testimonials</a>
+            <a class="nav-link" href="#programme-formation">Formations</a>  
           </li>
+          <!--
+          <li class="nav-item">
+            <a class="nav-link" href="#feedback-section">Témoignages</a>
+          </li>
+          -->
           <li class="nav-item btn-contact-us pl-4 pl-lg-0">
-            <button class="btn btn-info" data-toggle="modal" data-target="#exampleModal">Contact Us</button>
+            <button class="btn btn-info" data-toggle="modal" data-target="#exampleModal">Contactez-nous</button>
           </li>
         </ul>
       </div>
@@ -53,44 +58,43 @@
   </header>
   <div class="banner" >
     <div class="container">
-      <h1 class="font-weight-semibold">CTForming &<br>Marketing.</h1>
-      <h6 class="font-weight-normal text-muted pb-3">Simple is a simple template with a creative design that solves all your marketing and SEO queries.</h6>
-      <div>
-        <button class="btn btn-opacity-light mr-1">Get started</button>
-        <button class="btn btn-opacity-success ml-1">Learn more</button>
-      </div>
-      <img src="images/Group171.svg" alt="" class="img-fluid">
+      <h1 class="font-weight-semibold">CTForming</h1>
+      <h2 class="font-weight-semibold">Accompagnement et Formation Professionnelle</h2>
+      <h6 class="font-weight-normal text-muted pb-3">CT Forming vous propose des formations sur-mesure, qui s’appuient sur <br> une expérience de plus de 20 ans en ventes et en marketing digital et opérationnel en B2B.
+        <br> En présentiel ou en distanciel, vous serez amenés à mettre en pratique et à consolider les compétences ciblées.
+      <img src="images/intro.png" alt="" class="img-fluid">
     </div>
   </div>
   <div class="content-wrapper">
     <div class="container">
       <section class="features-overview" id="features-section" >
         <div class="content-header">
-          <h2>How does it works</h2>
-          <h6 class="section-subtitle text-muted">One theme that serves as an easy-to-use operational toolkit<br>that meets customer's needs.</h6>
+          <h2>Méthodes & outils pédagogiques</h2>
+          <h6 class="section-subtitle text-muted">En présentiel ou en distanciel<br>pour collaborer et se questionner</h6>
         </div>
         <div class="d-md-flex justify-content-between">
           <div class="grid-margin d-flex justify-content-start">
             <div class="features-width">
               <img src="images/Group12.svg" alt="" class="img-icons">
-              <h5 class="py-3">Speed<br>Optimisation</h5>
-              <p class="text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
+              <h5 class="py-3">Opérationnel<br>Pragmatique</h5>
+              <p class="text-muted">Tout au long de l’animation, des mises en pratique permettent d’acquérir de façon efficace chaque point abordé
+              </p>
               <a href="#"><p class="readmore-link">Readmore</p></a>  
             </div>
           </div>
           <div class="grid-margin d-flex justify-content-center">
             <div class="features-width">
               <img src="images/Group7.svg" alt="" class="img-icons">
-              <h5 class="py-3">SEO and<br>Backlinks</h5>
-              <p class="text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
+              <h5 class="py-3">Outils<br>collaboratifs</h5>
+              <p class="text-muted">Pour construire votre savoir et capitaliser sur vos expériences transférables.</p>
               <a href="#"><p class="readmore-link">Readmore</p></a>
             </div>
           </div>
           <div class="grid-margin d-flex justify-content-end">
             <div class="features-width">
               <img src="images/Group5.svg" alt="" class="img-icons">
-              <h5 class="py-3">Content<br>Marketing</h5>
-              <p class="text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
+              <h5 class="py-3">Outils<br>ludo-pédagogiques</h5>
+              <p class="text-muted">En présentiel ou en distanciel, vous vivrez quiz, brainstorms et autre animation pour maintenir une dynamique </p>
               <a href="#"><p class="readmore-link">Readmore</p></a>
             </div>
           </div>
@@ -99,35 +103,24 @@
       <section class="digital-marketing-service" id="digital-marketing-section">
         <div class="row align-items-center">
           <div class="col-12 col-lg-7 grid-margin grid-margin-lg-0" data-aos="fade-right">
-            <h3 class="m-0">We Offer a Full Range<br>of Digital Marketing Services!</h3>
+            <h3 class="m-0">4 formations pour faire de LinkedIn<br> votre nouveau meilleur ami</h3>
             <div class="col-lg-7 col-xl-6 p-0">
-              <p class="py-4 m-0 text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer turpis, suspendisse.</p>
-              <p class="font-weight-medium text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum. Fusce egeabus consectetuer</p>
-            </div>    
+              <p class="py-4 m-0 text-muted">Aujourd'hui, brochures, emailing et site internet ne suffisent pas. Il s'agit de créer des contenus Premium, pour attirer votre persona.</p>
+              <p class="font-weight-medium text-muted"> <br> Comment ? Avec une communication stratégique via les réseaux sociaux, comme LinkedIn. CT Forming vous accompagne dans l'attente de vos objectifs.  </p>
+            </div>   
+        
           </div>
           <div class="col-12 col-lg-5 p-0 img-digital grid-margin grid-margin-lg-0" data-aos="fade-left">
-            <img src="images/Group1.png" alt="" class="img-fluid">
+            <img src="images/4formations.png" alt="" class="img-fluid">
           </div>
-        </div>
-        <div class="row align-items-center">
-          <div class="col-12 col-lg-7 text-center flex-item grid-margin" data-aos="fade-right">
-            <img src="images/Group2.png" alt="" class="img-fluid">
-          </div>
-          <div class="col-12 col-lg-5 flex-item grid-margin" data-aos="fade-left">
-            <h3 class="m-0">Leading Digital Agency<br>for  Business Solution.</h3>
-            <div class="col-lg-9 col-xl-8 p-0">
-              <p class="py-4 m-0 text-muted">Power-packed with impressive features and well-optimized, this template is designed to provide the best performance in all circumstances.</p>
-              <p class="pb-2 font-weight-medium text-muted">Its smart features make it a powerful stand-alone website building tool.</p>
-            </div>
-            <button class="btn btn-info">Readmore</button>
-          </div>
-        </div>
+        </div> 
+     
       </section>     
-      <section class="case-studies" id="case-studies-section">
+      <section class="case-studies" id="programme-formation">
         <div class="row grid-margin">
           <div class="col-12 text-center pb-5">
-            <h2>Our case studies</h2>
-            <h6 class="section-subtitle text-muted">Lorem ipsum dolor sit amet, tincidunt vestibulum.</h6>
+            <h2>Les formations 2021</h2>
+            <h6 class="section-subtitle text-muted">Vous souhaitez développer votre visibilité numérique ou trouver de nouveaux clients ? <br> Ces programmes vous permettront de prendre en main votre développement digital </h6>
           </div>
           <div class="col-12 col-md-6 col-lg-3 stretch-card mb-3 mb-lg-0" data-aos="zoom-in">
             <div class="card color-cards">
@@ -138,14 +131,16 @@
                   </div>  
                   <div class="card-desc-box d-flex align-items-center justify-content-around">
                     <div>
-                      <h6 class="text-white pb-2 px-3">Know more about Online marketing</h6>
-                      <button class="btn btn-white">Read More</button>
+                      <h6 class="text-white pb-2 px-3">Optimisez votre profil LinkedIn </h6>
+                      <a target="_blank" href="./doc/Mise en forme Profil Linkedin_CTForming_012021.pdf" download="How-to-download-file.pdf">
+                        <button class="btn btn-white">Téléchargez<br>le programme</button>
+                      </a>
                     </div>
                   </div>
                 </div>   
                 <div class="card-details text-center pt-4">
-                    <h6 class="m-0 pb-1">Online Marketing</h6>
-                    <p>Seo, Marketing</p>
+                    <h6 class="m-0 pb-1">Votre profil LinkedIn</h6>
+                    <p>Personal Branding</p>
                 </div>
               </div>
             </div>
@@ -159,14 +154,16 @@
                   </div>  
                   <div class="card-desc-box d-flex align-items-center justify-content-around">
                     <div>
-                      <h6 class="text-white pb-2 px-3">Know more about Web Development</h6>
-                      <button class="btn btn-white">Read More</button>
+                      <h6 class="text-white pb-2 px-3">Construisez votre communication digitale sur LinkedIn</h6>
+                      <a target="_blank" href="./doc/Développez votre stratégie de communication digitale sur LinkedIn_CTForming_012021.pdf" download="How-to-download-file.pdf">
+                        <button class="btn btn-white">Téléchargez<br>le programme</button>
+                      </a>
                     </div>
                   </div>
                 </div>   
                 <div class="card-details text-center pt-4">
-                    <h6 class="m-0 pb-1">Web Development</h6>
-                    <p>Developing, Designing</p>
+                    <h6 class="m-0 pb-1">Inbound Marketing</h6>
+                    <p>Contenus, digital</p>
                 </div>
               </div>
             </div>
@@ -180,14 +177,16 @@
                   </div>  
                   <div class="card-desc-box d-flex align-items-center justify-content-around">
                     <div>
-                      <h6 class="text-white pb-2 px-3">Know more about Web Designing</h6>
-                      <button class="btn btn-white">Read More</button>
+                      <h6 class="text-white pb-2 px-3">Comment mieux vendre avec les réseaux sociaux ?</h6>
+                      <a target="_blank" href="./doc/Social Selling_CTForming_012021.pdf" download="How-to-download-file.pdf">
+                        <button class="btn btn-white">Téléchargez<br>le programme</button>
+                      </a>
                     </div>
                   </div>
                 </div>   
                 <div class="card-details text-center pt-4">
-                    <h6 class="m-0 pb-1">Web Designing</h6>
-                    <p>Designing, Developing</p>
+                    <h6 class="m-0 pb-1">Social selling</h6>
+                    <p>Développement des ventes</p>
                 </div>
               </div>
             </div>
@@ -201,20 +200,20 @@
                   </div>  
                   <div class="card-desc-box d-flex align-items-center justify-content-around">
                     <div>
-                      <h6 class="text-white pb-2 px-3">Know more about Software Development</h6>
-                      <button class="btn btn-white">Read More</button>
+                      <h6 class="text-white pb-2 px-3">LinkedIn, outil de recherche d'emploi</h6>
                     </div>
                   </div>
                 </div>   
                 <div class="card-details text-center pt-4">
-                    <h6 class="m-0 pb-1">Software Development</h6>
-                    <p>Developing, Designing</p>
+                    <h6 class="m-0 pb-1">Votre recherche d'emploi optimisé</h6>
+                    <p>Positionnement, Expertise</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>     
+      <!--
       <section class="customer-feedback" id="feedback-section">
         <div class="row">
           <div class="col-12 text-center pb-5">
@@ -324,14 +323,15 @@
           </div>
         </div>
       </section>
+      -->
       <section class="contact-us" id="contact-section">
         <div class="contact-us-bgimage grid-margin" >
           <div class="pb-4">
-            <h4 class="px-3 px-md-0 m-0" data-aos="fade-down">Do you have any projects?</h4>
-            <h4 class="pt-1" data-aos="fade-down">Contact us</h4>
+            <h4 class="px-3 px-md-0 m-0" data-aos="fade-down">Vous avez un projet ?</h4>
+            <h4 class="pt-1" data-aos="fade-down">Contactez-nous</h4>
           </div>
           <div data-aos="fade-up">
-            <button class="btn btn-rounded btn-outline-danger">Contact us</button>
+            <button class="btn btn-rounded btn-outline-danger">Contactez-nous</button>
           </div>          
         </div>
       </section>
@@ -340,8 +340,8 @@
           <div class="col-12 col-md-6 col-lg-3 grid-margin">
             <img src="images/Group2.svg" alt="" class="pb-2">
             <div class="pt-2">
-              <p class="text-muted m-0">mikayla_beer@feil.name</p>
-              <p class="text-muted m-0">906-179-8309</p>
+              <p class="text-muted m-0"></p>cathytouin@ctforming.fr</p>
+              <p class="text-muted m-0">06 62 80 94 17</p>
             </div>         
           </div>
           <div class="col-12 col-md-6 col-lg-3 grid-margin">
@@ -362,12 +362,10 @@
             <a href="#"><p class="m-0 pt-1">Discover</p></a> 
           </div>
           <div class="col-12 col-md-6 col-lg-3 grid-margin">
-              <h5 class="pb-2">Our address</h5>
-              <p class="text-muted">518 Schmeler Neck<br>Bartlett. Illinois</p>
+              <h5 class="pb-2">Notre adresse</h5>
+              <p class="text-muted">92270 Bois Colombes</p>
               <div class="d-flex justify-content-center justify-content-md-start">
                 <a href="#"><span class="mdi mdi-facebook"></span></a>
-                <a href="#"><span class="mdi mdi-twitter"></span></a>
-                <a href="#"><span class="mdi mdi-instagram"></span></a>
                 <a href="#"><span class="mdi mdi-linkedin"></span></a>
               </div>
           </div>
@@ -381,13 +379,13 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title" id="exampleModalLabel">Contact Us</h4>
+              <h4 class="modal-title" id="exampleModalLabel">Contactez-nous</h4>
             </div>
             <div class="modal-body">
               <form>
                 <div class="form-group">
-                  <label for="Name">Name</label>
-                  <input type="text" class="form-control" id="Name" placeholder="Name">
+                  <label for="Name">Nom</label>
+                  <input type="text" class="form-control" id="Name" placeholder="Nom">
                 </div>
                 <div class="form-group">
                   <label for="Email">Email</label>
@@ -395,13 +393,13 @@
                 </div>
                 <div class="form-group">
                   <label for="Message">Message</label>
-                  <textarea class="form-control" id="Message" placeholder="Enter your Message"></textarea>
+                  <textarea class="form-control" id="Message" placeholder="Tapez votre message"></textarea>
                 </div>
               </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-success">Submit</button>
+              <button type="button" class="btn btn-light" data-dismiss="modal">Annuler</button>
+              <button type="button" class="btn btn-success">Envoyez</button>
             </div>
           </div>
         </div>
