--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body id="body" data-spy="scroll" data-target=".navbar" data-offset="100">
-  <header id="header-section">
+  <header id="header-section" >
     <nav class="navbar navbar-expand-lg pl-3 pl-sm-0" id="navbar">
     <div class="container">
       <div class="navbar-brand-wrapper d-flex w-100">
-        <img src="images/Group2.svg" alt="">
+        <img src="images/logo_min.png" alt="">
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="mdi mdi-menu navbar-toggler-icon"></span>
         </button> 
@@ -49,7 +49,7 @@
           </li>
           -->
           <li class="nav-item btn-contact-us pl-4 pl-lg-0">
-            <button class="btn btn-info" data-toggle="modal" data-target="#exampleModal">Contactez-nous</button>
+            <button class="btn btn-info" data-toggle="modal" data-target="#contactModal">Contactez-nous</button>
           </li>
         </ul>
       </div>
@@ -59,10 +59,10 @@
   <div class="banner" >
     <div class="container">
       <h1 class="font-weight-semibold">CTForming</h1>
-      <h2 class="font-weight-semibold">Accompagnement et Formation Professionnelle</h2>
+      <h3 class="font-weight-semibold">Accompagnement et Formation Professionnelle</h3>
       <h6 class="font-weight-normal text-muted pb-3">CT Forming vous propose des formations sur-mesure, qui s’appuient sur <br> une expérience de plus de 20 ans en ventes et en marketing digital et opérationnel en B2B.
         <br> En présentiel ou en distanciel, vous serez amenés à mettre en pratique et à consolider les compétences ciblées.
-      <img src="images/intro.png" alt="" class="img-fluid">
+      <img src="images/Group171.svg" alt="" class="img-fluid">
     </div>
   </div>
   <div class="content-wrapper">
@@ -79,7 +79,6 @@
               <h5 class="py-3">Opérationnel<br>Pragmatique</h5>
               <p class="text-muted">Tout au long de l’animation, des mises en pratique permettent d’acquérir de façon efficace chaque point abordé
               </p>
-              <a href="#"><p class="readmore-link">Readmore</p></a>  
             </div>
           </div>
           <div class="grid-margin d-flex justify-content-center">
@@ -87,7 +86,6 @@
               <img src="images/Group7.svg" alt="" class="img-icons">
               <h5 class="py-3">Outils<br>collaboratifs</h5>
               <p class="text-muted">Pour construire votre savoir et capitaliser sur vos expériences transférables.</p>
-              <a href="#"><p class="readmore-link">Readmore</p></a>
             </div>
           </div>
           <div class="grid-margin d-flex justify-content-end">
@@ -95,7 +93,6 @@
               <img src="images/Group5.svg" alt="" class="img-icons">
               <h5 class="py-3">Outils<br>ludo-pédagogiques</h5>
               <p class="text-muted">En présentiel ou en distanciel, vous vivrez quiz, brainstorms et autre animation pour maintenir une dynamique </p>
-              <a href="#"><p class="readmore-link">Readmore</p></a>
             </div>
           </div>
         </div>
@@ -331,51 +328,32 @@
             <h4 class="pt-1" data-aos="fade-down">Contactez-nous</h4>
           </div>
           <div data-aos="fade-up">
-            <button class="btn btn-rounded btn-outline-danger">Contactez-nous</button>
+            <button class="btn btn-rounded btn-outline-danger" data-toggle="modal" data-target="#contactModal">Contactez-nous</button>
           </div>          
         </div>
       </section>
       <section class="contact-details" id="contact-details-section">
         <div class="row text-center text-md-left">
           <div class="col-12 col-md-6 col-lg-3 grid-margin">
-            <img src="images/Group2.svg" alt="" class="pb-2">
-            <div class="pt-2">
-              <p class="text-muted m-0"></p>cathytouin@ctforming.fr</p>
-              <p class="text-muted m-0">06 62 80 94 17</p>
-            </div>         
+            <h5 class="pb-2">Nos coordonnées</h5>
+            <p class="text-muted m-0"></p>cathytouin@ctforming.fr</p>
+            <p class="text-muted m-0">06 62 80 94 17</p>
+            <div class="d-flex justify-content-center justify-content-md-start">
+              <a href="#"><span class="mdi mdi-facebook"></span></a>
+              <a href="#"><span class="mdi mdi-linkedin"></span></a>
+            </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 grid-margin">
-            <h5 class="pb-2">Get in Touch</h5>
-            <p class="text-muted">Don’t miss any updates of our new templates and extensions.!</p>
-            <form>
-              <input type="text" class="form-control" id="Email" placeholder="Email id">
-            </form>
-            <div class="pt-3">
-              <button class="btn btn-dark">Subscribe</button>
-            </div>   
-          </div>
-          <div class="col-12 col-md-6 col-lg-3 grid-margin">
-            <h5 class="pb-2">Our Guidelines</h5>
-            <a href="#"><p class="m-0 pb-2">Terms</p></a>   
-            <a href="#" ><p class="m-0 pt-1 pb-2">Privacy policy</p></a> 
-            <a href="#"><p class="m-0 pt-1 pb-2">Cookie Policy</p></a> 
-            <a href="#"><p class="m-0 pt-1">Discover</p></a> 
-          </div>
-          <div class="col-12 col-md-6 col-lg-3 grid-margin">
-              <h5 class="pb-2">Notre adresse</h5>
-              <p class="text-muted">92270 Bois Colombes</p>
-              <div class="d-flex justify-content-center justify-content-md-start">
-                <a href="#"><span class="mdi mdi-facebook"></span></a>
-                <a href="#"><span class="mdi mdi-linkedin"></span></a>
-              </div>
+            <h5 class="pb-2">Divers</h5>
+            <a href="#"><p class="m-0 pt-1 pb-2" data-toggle="modal" data-target="#cookiesModal">Cookie Policy</p></a> 
           </div>
         </div>  
       </section>
       <footer class="border-top">
         <p class="text-center text-muted pt-4">Copyright © 2019<a href="https://www.bootstrapdash.com/" class="px-1">Bootstrapdash.</a>All rights reserved.</p>
       </footer>
-      <!-- Modal for Contact - us Button -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <!-- Modal for Contact - fr Button -->
+      <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -404,6 +382,27 @@
           </div>
         </div>
       </div>
+
+      <!-- Modal cookies -->
+      <div class="modal fade" id="cookiesModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title" id="exampleModalLabel">Politique des cookies</h4>
+            </div>
+            <div class="modal-body">
+              <p class="text-muted">
+                mettre le texte des cookies.mettre le texte des cookies.mettre le texte des cookies.mettre le texte des cookies.mettre le texte des cookies.mettre le texte des cookies.mettre le texte des cookies.mettre le texte des cookies.mettre le texte des cookies.mettre le texte des cookies.
+              </p>              
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-light" data-dismiss="modal">Fermer</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div> 
   </div>
   <script src="vendors/jquery/jquery.min.js"></script>
