--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg pl-3 pl-sm-0" id="navbar">
     <div class="container">
       <div class="navbar-brand-wrapper d-flex w-100">
-        <img src="images/logo_min.png" alt="">
+        <img src="images/logo_min.png" alt="" width="50" height="50" >
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="mdi mdi-menu navbar-toggler-icon"></span>
         </button> 
@@ -25,7 +25,7 @@
         <ul class="navbar-nav align-items-lg-center align-items-start ml-auto">
           <li class="d-flex align-items-center justify-content-between pl-4 pl-lg-0">
             <div class="navbar-collapse-logo">
-              <img src="images/Group2.svg" alt="">
+              <img src="images/logo_min.png" alt="" width="50" height="50" >
             </div>
             <button class="navbar-toggler close-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="mdi mdi-close navbar-toggler-icon pl-5"></span>
@@ -59,9 +59,12 @@
   <div class="banner" >
     <div class="container">
       <h1 class="font-weight-semibold">CTForming</h1>
-      <h3 class="font-weight-semibold">Accompagnement et Formation Professionnelle</h3>
-      <h6 class="font-weight-normal text-muted pb-3">CT Forming vous propose des formations sur-mesure, qui s’appuient sur <br> une expérience de plus de 20 ans en ventes et en marketing digital et opérationnel en B2B.
+      <h3 class="font-weight-semibold sub-title">Accompagnement et Formation Professionnelle</h3>
+      <h6 class="font-weight-normal sub-title text-muted pb-3">
+        CT Forming vous propose des formations sur-mesure, qui s’appuient sur 
+        <br> une expérience de plus de 20 ans en ventes et en marketing digital et opérationnel en B2B.
         <br> En présentiel ou en distanciel, vous serez amenés à mettre en pratique et à consolider les compétences ciblées.
+      </h6>  
       <img src="images/Group171.svg" alt="" class="img-fluid">
     </div>
   </div>
@@ -333,14 +336,14 @@
         </div>
       </section>
       <section class="contact-details" id="contact-details-section">
-        <div class="row text-center text-md-left">
+        <div class="row text-center text-md-left justify-content-center">
           <div class="col-12 col-md-6 col-lg-3 grid-margin">
             <h5 class="pb-2">Nos coordonnées</h5>
             <p class="text-muted m-0"></p>cathytouin@ctforming.fr</p>
             <p class="text-muted m-0">06 62 80 94 17</p>
             <div class="d-flex justify-content-center justify-content-md-start">
-              <a href="#"><span class="mdi mdi-facebook"></span></a>
-              <a href="#"><span class="mdi mdi-linkedin"></span></a>
+              <a href="https://www.facebook.com/CTForming" target="_blank"><span class="mdi mdi-facebook"></span></a>
+              <a href="https://www.linkedin.com/in/cathytouin" target="_blank"><span class="mdi mdi-linkedin"></span></a>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3 grid-margin">
