--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   <div class="card-desc-box d-flex align-items-center justify-content-around">
                     <div>
                       <h6 class="text-white pb-2 px-3">Optimisez votre profil LinkedIn </h6>
-                      <a target="_blank" href="./doc/Mise en forme Profil Linkedin_CTForming_012021.pdf" download="How-to-download-file.pdf">
+                      <a target="_blank" href="./doc/Programme Mise en forme Profil Linkedin_CTForming_0121.pdf" download="Programme Mise en forme Profil Linkedin_CTForming_0121.pdf">
                         <button class="btn btn-white">Téléchargez<br>le programme</button>
                       </a>
                     </div>
@@ -168,14 +168,14 @@
                   <div class="card-desc-box d-flex align-items-center justify-content-around">
                     <div>
                       <h6 class="text-white pb-2 px-3">Construisez votre communication digitale sur LinkedIn</h6>
-                      <a target="_blank" href="./doc/Développez votre stratégie de communication digitale sur LinkedIn_CTForming_012021.pdf" download="How-to-download-file.pdf">
+                      <a target="_blank" href="./doc/Programme_Développez votre stratégie de communication digitale sur LinkedIn_CTForming_0121.pdf" download="HProgramme_Développez votre stratégie de communication digitale sur LinkedIn_CTForming_0121.pdf">
                         <button class="btn btn-white">Téléchargez<br>le programme</button>
                       </a>
                     </div>
                   </div>
                 </div>   
                 <div class="card-details text-center pt-4">
-                    <h6 class="m-0 pb-1">Inbound Marketing</h6>
+                    <h6 class="m-0 pb-1">Communication digitale</h6>
                     <p>Contenus, digital</p>
                 </div>
               </div>
@@ -191,7 +191,7 @@
                   <div class="card-desc-box d-flex align-items-center justify-content-around">
                     <div>
                       <h6 class="text-white pb-2 px-3">Comment mieux vendre avec les réseaux sociaux ?</h6>
-                      <a target="_blank" href="./doc/Social Selling_CTForming_012021.pdf" download="How-to-download-file.pdf">
+                      <a target="_blank" href="./doc/Programme Social Selling_CTForming_0121.pdf" download="Programme Social Selling_CTForming_0121.pdf">
                         <button class="btn btn-white">Téléchargez<br>le programme</button>
                       </a>
                     </div>
